# CodeLingo

./: .gitignore  CodeLingo_Pitch_Deck.pptx  Makefile  README.md  codequest.db  requirements.txt  ~$CodeLingo_Pitch_Deck.pptx
app/: dependencies.py  main.py
app/core/: config.py
app/db/: session.py
app/models/: session.py  user.py
app/schemas/: auth.py
app/services/: auth_service.py
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  progress.py  questions.py  users.py
backend/app/core/: config.py  levels.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  session.py  user.py
backend/app/schemas/: auth.py  leaderboard.py  profile.py  progress.py  question.py
backend/app/services/: auth_service.py  gemini_service.py  progress_service.py  question_cache.py  question_service.py
backend/tests/: test_progress_service.py  test_question_service.py
codelingo-skill/: codelingo.skill
codelingo-skill/codelingo/: SKILL.md
codelingo-skill/codelingo/references/: data-contract.md  methodology.md  screens.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/choose-language/: page.tsx
frontend/app/components/: ErrorModal.tsx  SuccessScreen.tsx  TopBar.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  auth-context.tsx
scripts/: generate_pitch_deck.py
(+7 files in other folders)
